src/index.css
:root {
  font-family: Arial, Inter, system-ui, Avenir, Helvetica, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  color-scheme: light dark;
  color: rgba(0, 0, 0, 0.87);
  background-color: #f0f0f0;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  background-color: #f0f0f0;
}

#root {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.admin #root {
  width: 100%;
  height: 100%;
}

.admin .bg-white {
  width: 100%;
  height: 100%;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

